Renombrado proyecto a DPL_1